@@ -2,9 +2,29 @@
 /**
  * Display search result page. 
  * 
- * @ Theme: Manduca - focus on accessibility
- * @ Since 1.0
+ * @Since 1.0
  **/
+
+ /*  This file is part of WordPress theme named Manduca - focus on accessibility.
+ *
+	Copyright (C) 2015-2018  Zsolt Edelényi (ezs@web25.hu)
+
+    Manduca is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.
+*/
+
+ 
+
 ?>
 
 <?php get_header(); ?>
@@ -30,7 +50,7 @@
 		<?php else : ?>
 
 			<article id="post-0" class="post no-results not-found">
-					<h1 tabindex="0"><?php _e( 'No matching result found.', 'manduca' ) ?></h1>
+					<h1 tabindex="0"><?php printf( __( 'No matching result found for %s.', 'manduca' ), get_search_query() ) ?></h1>
 				</header>
 
 				<div class="entry-content">
